Made it device friendly

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <link rel="stylesheet" type="text/css" href="./css/header.css">
     <link rel="stylesheet" type="text/css" href="./css/content.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 <body>
