Made it device friendly

--- a/index.html
+++ b/index.html
@@ -32,14 +32,23 @@
         </div>
     </div>
     <div id="navbar">
-        <a onclick="window.location='#about'">About</a>
-        <a onclick="window.location='#education'">Education</a>
-        <a onclick="window.location='#projects'">Projects</a>
-        <a onclick="window.location='#certificates'">Certificates</a>
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#projects">Projects</a>
+        <a href="#certificates">Certificates</a>
     </div>
     <div id="container">
         <div id="about" class="content">
-            About
+            <h2>About</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque et dolor
+                velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
+            <h4>Hobbies:</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque et dolor
+                velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
+            <h4>My Video profile:</h4>
+            <div id="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bZKmtcFAz6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
         <div id="education" class="content">
             Education
