added additional contents

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/x-icon" href="./images/icons/tab-icon.png">
     <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <link rel="stylesheet" type="text/css" href="./css/header.css">
+    <link rel="stylesheet" type="text/css" href="./css/slider.css">
     <link rel="stylesheet" type="text/css" href="./css/content.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
@@ -38,26 +39,31 @@
         <a href="#certificates">Certificates</a>
     </div>
     <div id="container">
-        <div id="about" class="content">
-            <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque et dolor
-                velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
-            <h4>Hobbies:</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque et dolor
-                velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
-            <h4>My Video profile:</h4>
-            <div id="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/bZKmtcFAz6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div id="wrapper">
+            <div id="slider-holder">
+                <div id="about">
+                    <div id="text">
+                        <h2>About</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque
+                            et dolor velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
+                        <h4>Hobbies:</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque
+                            et dolor velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
+                    </div>
+                    <div id="video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/bZKmtcFAz6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div id="education">
+                    Education
+                </div>
+                <div id="projects">
+                    Projects
+                </div>
+                <div id="certificates">
+                    Certificates
+                </div>
             </div>
-        </div>
-        <div id="education" class="content">
-            Education
-        </div>
-        <div id="projects" class="content">
-            Projects
-        </div>
-        <div id="certificates" class="content">
-            Certificates
         </div>
     </div>
 </body>
