added some content

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
         <div id="wrapper">
             <div id="slider-holder">
                 <div id="about">
-                    <div id="text">
-                        <h2>About</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque
-                            et dolor velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
-                        <h4>Hobbies:</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque
+                    <div id="body">
+                        <p id="about-headline">ABOUT ME</p>
+                        <p id="about-body"> &nbsp &nbsp &nbsp Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin.
+                            Quisque et dolor velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
+                        <p id="skills-headline">SKILLS</p>
+                        <p id="skills-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mauris arcu, egestas sed vulputate at, accumsan et dui. Morbi id lorem felis. Proin laoreet neque a consectetur tincidunt. Sed malesuada fermentum sollicitudin. Quisque
                             et dolor velit. Fusce tincidunt lacus sit amet sapien pretium pretium. Sed quis dolor imperdiet, ornare eros eget, auctor mi. Donec at tincidunt nulla, blandit accumsan felis. </p>
                     </div>
                     <div id="video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/bZKmtcFAz6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/bZKmtcFAz6g" title="My Video Portfolio" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div id="education">
